fix code overflow

--- a/styles/docs/_docs.scss
+++ b/styles/docs/_docs.scss
@@ -24,13 +24,6 @@
   margin-bottom: 1rem;
 }
 
-.code-example-body {
-  white-space: pre;
-  word-wrap: break-word;
-  margin: 2rem;
-  box-shadow: 0 0 0.25px 0.25px $gray-light;
-}
-
 .docs-variant {
   margin-bottom: 0.25rem;
 }
