--- a/styles/docs/_example.scss
+++ b/styles/docs/_example.scss
@@ -48,3 +48,10 @@
   width: 100%;
   text-align: center;
 }
+
+.code-example-body {
+  white-space: pre;
+  overflow: auto;
+  margin: 2rem;
+  box-shadow: 0 0 0.25px 0.25px $gray-light;
+}
